--- a/ApachePOI_OJT/test-output/old/Default suite/methods.html
+++ b/ApachePOI_OJT/test-output/old/Default suite/methods.html
@@ -1,14 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6e8abd">  <td>21/05/10 10:55:22</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Users_Table.usersTable_1(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:users_Table.Users_Table@6f7fd0e6]">usersTable_1</td> 
-  <td>main@485041780</td>   <td></td> </tr>
-<tr bgcolor="6e8abd">  <td>21/05/10 10:55:27</td>   <td>4557</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Users_Table.usersTable_1(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:users_Table.Users_Table@6f7fd0e6]">usersTable_1</td> 
-  <td>main@485041780</td>   <td></td> </tr>
-<tr bgcolor="6e8abd">  <td>21/05/10 10:55:30</td>   <td>7625</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Users_Table.usersTable_1(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:users_Table.Users_Table@6f7fd0e6]">usersTable_1</td> 
-  <td>main@485041780</td>   <td></td> </tr>
-<tr bgcolor="6e8abd">  <td>21/05/10 10:55:33</td>   <td>10712</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Users_Table.usersTable_1(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:users_Table.Users_Table@6f7fd0e6]">usersTable_1</td> 
-  <td>main@485041780</td>   <td></td> </tr>
-<tr bgcolor="6e8abd">  <td>21/05/10 10:55:36</td>   <td>13760</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Users_Table.usersTable_1(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:users_Table.Users_Table@6f7fd0e6]">usersTable_1</td> 
+<tr bgcolor="e9a889">  <td>21/05/14 08:06:25</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Demo.test01()[pri:0, instance:robotClass.Demo@6f7fd0e6]">test01</td> 
   <td>main@485041780</td>   <td></td> </tr>
 </table>
